JITWatch is now compatible with JDK9